# MicroMagnum

./: .gitignore  AUTHORS  COPYING-external-libs  INSTALL  README.md  TODO
src/: CMakeLists.txt  TODO  countloc.sh  delete_pyc.sh  file_header.txt  index.txt  run-all-tests.py
src/cmake/: FindPython.cmake
src/magneto/: Benchmark.cpp  Benchmark.h  CMakeLists.txt  Logger.cpp  Logger.h  Magneto.cpp  Magneto.h  config.cmake-generated.h.in  config.h  config.h.in  os.h  os_posix.cpp  os_windows.cpp  restrict.h
src/magneto/bindings/: CMakeLists.txt  PythonByteArray.cpp  PythonByteArray.h  PythonByteArray.i  PythonCallable.cpp  PythonCallable.h  PythonCallable.i  benchmark.i  evolver.i  magneto.i  magneto_cpu.i  magneto_cuda.i  math.i  mmm.i
src/magneto/bindings/mmm/: anisotropy.i  demag.i  exchange.i  io.i  llge.i  minimize.i  slonchewski.i  zhangli.i
src/magneto/evolver/: CMakeLists.txt  cvode.cpp  cvode.h  diffeq.cpp  diffeq.h  ode.cpp  ode.h  runge_kutta.cpp  runge_kutta.h  runge_kutta_cpu.cpp  runge_kutta_cpu.h  runge_kutta_cuda.cu  runge_kutta_cuda.h
src/magneto/math/: CMakeLists.txt  ScaledAbsMax.cpp  ScaledAbsMax.h  ScaledAbsMax_cuda.cu  ScaledAbsMax_cuda.h  accurate_sum.h  gradient.cpp  gradient.h  gradient_cuda.cu  gradient_cuda.h
src/magneto/math/conv/: AntisymmetricMatrixVectorConvolution_FFT.cpp  AntisymmetricMatrixVectorConvolution_FFT.h  CMakeLists.txt  MatrixVectorConvolution_FFT.cpp  MatrixVectorConvolution_FFT.h  SymmetricMatrixVectorConvolution_FFT.cpp  SymmetricMatrixVectorConvolution_FFT.h  SymmetricMatrixVectorConvolution_Simple.cpp  SymmetricMatrixVectorConvolution_Simple.h  TensorFieldSetup.cpp  TensorFieldSetup.h  VectorVectorConvolution_FFT.cpp  VectorVectorConvolution_FFT.h  VectorVectorConvolution_Simple.cpp  VectorVectorConvolution_Simple.h  classes.txt
src/magneto/matrix/: CMakeLists.txt  Makefile  README.txt  Shape.cpp  Shape.h  main.cpp  matty.cpp  matty.h  matty.i  matty.inc.i  matty_ext.h
src/magneto/matrix/device/: Array.cpp  Array.h  Device.cpp  Device.h  DeviceManager.cpp  DeviceManager.h  cuda_tools.cpp  cuda_tools.h
src/magneto/matrix/ext/: Extremum.cpp  Extremum.h  FFT.cpp  FFT.h  LinearInterpolate.cpp  LinearInterpolate.h
src/magneto/matrix/matrix/: AbstractMatrix.cpp  AbstractMatrix.h
src/magneto/mesh/: CMakeLists.txt  Field.cpp  Field.h  Field.i  RectangularMesh.h  RectangularMesh.i  VectorField.cpp  VectorField.h  VectorField.i
src/magneto/mmm/: CMakeLists.txt  README.txt  constants.h
src/magneto/mmm/anisotropy/: anisotropy.cpp  anisotropy.h  anisotropy_cpu.cpp  anisotropy_cpu.h  anisotropy_cuda.cu  anisotropy_cuda.h
src/magneto/mmm/demag/: demag_static.cpp  demag_static.h  demag_tensor.cpp  demag_tensor.h  tensor.cpp  tensor.h  tensor_integrals.h  tensor_round.cpp  tensor_round.h
src/magneto/mmm/exchange/: exchange.cpp  exchange.h  exchange_cpu.cpp  exchange_cpu.h  exchange_cuda.cu  exchange_cuda.h  fdm_exchange.cpp  fdm_exchange.h  fdm_exchange_cpu.cpp  fdm_exchange_cpu.h  fdm_exchange_cuda.cu  fdm_exchange_cuda.h
src/magneto/mmm/io/: OMFExport.cpp  OMFExport.h  OMFHeader.cpp  OMFHeader.h  OMFImport.cpp  OMFImport.h  endian.h
src/magneto/mmm/llge/: llge.cpp  llge.h  llge_cpu.cpp  llge_cpu.h  llge_cuda.cu  llge_cuda.h
src/magneto/mmm/minimize/: .minimize_cpu.cpp.swp  .minimize_cuda.cu.swp  minimize.cpp  minimize.h  minimize_cpu.cpp  minimize_cpu.h  minimize_cuda.cu  minimize_cuda.h
src/magneto/mmm/spintorque/: fdm_slonchewski.cpp  fdm_slonchewski.h  fdm_zhangli.cpp  fdm_zhangli.h  fdm_zhangli_cpu.cpp  fdm_zhangli_cpu.h  fdm_zhangli_cuda.cu  (+1 more)
src/magnum/: __init__.py  callCvode.py  command_line.py  config.py  console.py  llgDiffEq.py  logger.py  magneto.py  magneto_cpu.py  magneto_cuda.py  nvidia_smi.out  nvidia_smi.py  test.py  tools.py
src/magnum/controller/: __init__.py  controller.py  controller_base.py  controllers.py  create_controller.py  localcontroller.py
src/magnum/evolver/: __init__.py  cvode.py  euler.py  evolver.py  runge_kutta.py  runge_kutta_4.py  state.py  stepsize_controller.py  tableaus.py
src/magnum/mesh/: __init__.py  field.py  rectangular_mesh.py  vector_field.py
src/magnum/meshes/: __init__.py  rectangular_mesh.py  vector_field.py
src/magnum/micromagnetics/: __init__.py  alternating_current.py  alternating_field.py  anisotropy_field.py  constants.py  create_solver.py  current.py  current_path.py  exchange_field.py  external_field.py  homogeneous_field.py  landau_lifshitz_gilbert.py  macro_spin_torque.py  micro_magnetics.py  micro_magnetics_solver.py  micro_magnetics_stepsize_controller.py  modules.txt  shortcuts.py  simple_field.py  spin_torque.py  static_field.py  stray_field.py  stray_field_calculator.py
src/magnum/module/: __init__.py  assign.py  module.py  system.py
src/magnum/solver/: __init__.py  condition.py  solver.py  step_handler.py
src/magnum_tests/: __init__.py  anisotropy_test.py  body_test.py  controller_test.py  cuboid_test.py  cvode_test.py  cylinder_test.py  exchange.py  exchange_test.py  external_field_test.py  helpers.py  image_shape_creator_test.py  image_test.py  llge_test.py  material_test.py  matrix_test.py  numpy_interaction_test.py  rectangular_mesh_test.py  scaled_abs_max_test.py  shape_test.py  sphere_test.py  spintorque_test.py  stray_field_test.py  vector_field_test.py  vector_matrix_test.py  world_test.py
src/magnum_tests/bugs/: bug00.py
src/magnum_tests/ref/: H1_unianiso.omf  H1_unianiso.txt  M1.omf
src/tests/: run-all-tests.py
src/tests/controller/: __init__.py  controller_test.py
src/tests/evolver/: __init__.py
src/tests/magneto/: __init__.py  anisotropy_test.py  exchange.py  helpers.py  llge_test.py  matrix_test.py  my_testcase.py  numpy_interaction_test.py  scaled_abs_max_test.py  slonchewski_test.py  spintorque_test.py  stray_field_test.py  vector_matrix_test.py
src/tests/mesh/: __init__.py  rectangular_mesh_test.py  vector_field_test.py
src/tests/modules/: __init__.py  external_field_test.py
src/tests/ref/: H1_exch.omf  H1_stray.omf  M2.omf
src/tests/world/: __init__.py  body_test.py  material_test.py  world_test.py
(+216 files in other folders)
